--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,6 +1,7 @@
 {
   "name": "back-end",
   "version": "1.0.0",
+  
   "description": "",
   "main": "server.js",
   "scripts": {
@@ -9,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.3"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.3",
+    "multer": "^1.4.2"
   }
 }
+
