--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,22 +1,22 @@
 {
   "name": "back-end",
   "version": "1.0.0",
-  
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "password-validator": "^5.1.1"
   }
 }
-
