--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,8 +14,11 @@
     "body-parser": "^1.19.0",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
+    "express-brute": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
+    "mongoose-sanitizer-plugin": "^1.1.0",
+    "mongoose-validator": "^2.1.0",
     "multer": "^1.4.2",
     "password-validator": "^5.1.1"
   }
