--- a/back-end/package.json
+++ b/back-end/package.json
@@ -20,6 +20,7 @@
     "mongoose-sanitizer-plugin": "^1.1.0",
     "mongoose-validator": "^2.1.0",
     "multer": "^1.4.2",
+    "nanoid": "^3.1.22",
     "password-validator": "^5.1.1"
   }
 }
