--- a/back-end/.env
+++ b/back-end/.env
@@ -1,2 +1,2 @@
 TOKEN = "drxyctfugvhbujik84hf!!"
-MONGOOSE = "mongodb+srv://Jokizi:boosterspirit123@cluster0.qnroh.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+MONGOOSE = "mongodb+srv://UserApi:Test1234@cluster0.qnroh.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
