--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,9 +19,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "mongoose-sanitizer-plugin": "^1.1.0",
+    "mongoose-unique-validator": "^2.0.3",
     "mongoose-validator": "^2.1.0",
     "multer": "^1.4.2",
     "nanoid": "^3.1.22",
+    "nodemon": "^2.0.13",
     "password-validator": "^5.1.1"
   }
 }
