--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,6 +17,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "express-brute": "^1.0.1",
+    "express-rate-limit": "^5.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "mongoose-sanitizer-plugin": "^1.1.0",
