--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "bootstrap": "^4.1.3",
-    "core-js": "^2.5.4",
+    "core-js": "2.5.x",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
@@ -43,8 +43,9 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "node-sass": "^6.0.1",
     "protractor": "~5.4.0",
+    "sass": "^1.43.2",
+    "sass-loader": "^7.1.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.1"
